# data-preparation-selection

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml  run_all_and_rerun.sh  run_all_selectors.sh  run_lawyer_select.sh  run_perplexity_mid_high.sh  run_rerun_emb_and_lawyer.sh
configs/: composite.py  deita_quality.py  diversity_kcenter.py  embedding_similarity.py  length_based.py  llm_selector.py  perplexity_based.py  perplexity_based_high.py  perplexity_based_mid.py  quality_scorer.py  random.py  source_balanced_random.py
data/: input.jsonl  output_composite.jsonl
examples/: composite.py  deita_quality.py  diversity_kcenter.py  embedding_similarity.py  length_based.py  llm_selector.py  perplexity_based.py  perplexity_based_high.py  perplexity_based_mid.py  quality_scorer.py  random.py  source_balanced_random.py
src/data_selection/: __init__.py  _resolve.py  cli.py  composite.py  config.py  dataset.py  deita_quality.py  diversity_kcenter.py  embedding_similarity.py  length_based.py  llm_selector.py  perplexity_based.py  protocol.py  quality_scorer.py  random_selection.py  runner.py  score_cache.py  source_balanced_random.py  types.py  utils.py
src/data_selection/selectors/: __init__.py  composite.py  deita_quality.py  diversity_kcenter.py  embedding_similarity.py  length_based.py  llm_selector.py  perplexity_based.py  quality_scorer.py  random_selection.py  source_balanced_random.py
tests/: test_deita_quality.py  test_diversity_kcenter.py  test_embedding_similarity.py  test_length_based.py  test_llm_selector.py  test_perplexity_based.py  test_quality_scorer.py  test_random_selection.py  test_runner.py  test_source_balanced_random.py
