[project]
name = "data-selection"
version = "0.1.0"
description = "数据选择框架"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = []

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
]

[tool.uv]
index-url = "https://mirrors.aliyun.com/pypi/simple"
