[project]
name = "data-selection"
version = "0.1.0"
description = "数据选择框架"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "dataflex",
    "faiss-cpu",
    "numpy",
    "omegaconf",
    "open-dataflow",
    "scikit-learn",
    "sentence-transformers>=5.5.1",
    "torch",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[project.scripts]
select = "data_selection.cli:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "pre-commit>=4.2.0",
    "pyright>=1.1.408",
    "pytest>=8.4.1",
]

[[tool.uv.index]]
name = "tencent"
url = "https://mirrors.cloud.tencent.com/pypi/simple"
default = true

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
dataflex = { git = "https://github.com/yibotongxue/DataFlex.git" }
torch = { index = "torch" }
